--- a/Changelog.txt
+++ b/Changelog.txt
@@ -13,6 +13,7 @@ UseBB 1.0 Changelog
 - Added settings to enable/disable IP bans and badwords filter.
 - Added setting to hide contact info in profiles for guests.
 - Added possibility for admins to use hidden/disabled template sets.
+- Added setting to show raw entities between [code].
 - Fixed bug #1001: Edit this member link visible in own profile.
 - Fixed bug #992: RSS feed redirects on restricted board.
 - Fixed bug #988: default timezone for members not set.
