--- a/Changelog.txt
+++ b/Changelog.txt
@@ -27,6 +27,7 @@ UseBB 1.0 Changelog
 - Now serving application/xhtml+xml (text/html on IE et al).
 - Added error upon lost saltcode when registering.
 - Make trigger_error() errors E_USER_ERROR.
+- Hide debug info for banned IP's.
 - Various template improvements.
 - <label for="..."> replaced by nesting <label> tags.
 
