--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,6 +4,7 @@ UseBB 1.0 Changelog
 ------------------------------
 
 - Added to ACP: member pruning.
+- Added to ACP: open proxy detection controls.
 - Added minimum access levels for search and active topics.
 - Added searching and detailed sorting on member list.
 - Added forum pruning by locking topics.
