--- a/Changelog.txt
+++ b/Changelog.txt
@@ -26,6 +26,7 @@ UseBB 1.0 Changelog
 - Fixed bug where a user cannot set his displayed name equal to his
 	username that matches a ban mask.
 - New session management, saving up to 3 queries per request.
+- Automatically login after activation.
 - Changed ACP config to contain many additional info.
 - ACP config now also checks for valid session name.
 - config.php must no longer be writable by PHP.
