--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,7 +4,7 @@ UseBB 1.0 Changelog
 ------------------------------
 
 - Added to ACP: member pruning.
-- Added to ACP: open proxy detection controls.
+- Added automatic DNSBL powered IP banning.
 - Added setting to hide never activated members from member list.
 - Added minimum and maximum length for usernames.
 - Added minimum access levels for search and active topics.
@@ -22,9 +22,9 @@ UseBB 1.0 Changelog
 - Fixed bug #988: default timezone for members not set.
 - Fixed bug #971: Undefined index: id upon creating forum.
 - Fixed bug #964: white space in IE before tables in ACP.
-- Fixed unwanted smiley parsing on HTML entities.
 - Fixed bug where a user cannot set his displayed name equal to his
 	username that matches a ban mask.
+- Fixed unwanted smiley parsing on HTML entities.
 - New session management, saving up to 3 queries per request.
 - Automatically login after activation.
 - Changed ACP config to contain many additional info.
