Removed obsolete hide_undefined_config_setting_warnings setting.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -30,6 +30,7 @@ UseBB 1.0 Changelog
 - Fixed not unhtml'ed query in ACP SQL toolbox textarea.
 - Fixed unused quick_reply_textarea_cols.
 - Fixed BBCode parsing to create well-formed XHTML.
+- Removed obsolete hide_undefined_config_setting_warnings setting.
 - New session management, saving up to 3 queries per request.
 - Automatically login after activation.
 - Changed ACP config to contain many additional info.
