--- a/Changelog.txt
+++ b/Changelog.txt
@@ -19,6 +19,7 @@ UseBB 1.0 Changelog
 - Added possibility for admins to use hidden/disabled template sets.
 - Added setting to show raw entities between [code].
 - Added email address DNS (MX records) checking.
+- Added load average values to ACP index when possible.
 - Fixed possible XSS issue with not unhtml'ed avatar URL.
 - Fixed bug #1001: Edit this member link visible in own profile.
 - Fixed bug #992: RSS feed redirects on restricted board.
@@ -44,6 +45,7 @@ UseBB 1.0 Changelog
 - Hide debug info and page links for banned IP's.
 - Cookie path is now always auto-detected as "/".
 - Easier navigation in ACP general configuration.
+- Rewritten method for finding server load values.
 - Various template improvements.
 - <label for="..."> replaced by nesting <label> tags.
 
