--- a/Changelog.txt
+++ b/Changelog.txt
@@ -52,6 +52,7 @@ UseBB 1.0 RC1 Changelog
 - Guest usernames can again contain all characters and entities.
 - Reintroduced forumlist_topic_rtrim_length for forum index.
 - Various fixes to the install wizard.
+- Flood protection message contains remaining seconds.
 - Various template improvements.
 - <label for="..."> replaced by nesting <label> tags.
 
