--- a/Changelog.txt
+++ b/Changelog.txt
@@ -53,6 +53,7 @@ UseBB 1.0 RC1 Changelog
 - Reintroduced forumlist_topic_rtrim_length for forum index.
 - Various fixes to the install wizard.
 - Flood protection message contains remaining seconds.
+- Added some more rel="nofollow" attributes at various places.
 - Various template improvements.
 - <label for="..."> replaced by nesting <label> tags.
 
