Updated docs files and added HTML readme file.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-UseBB is brought to you with the help of numerous people.
+Since 2003, UseBB is brought to you with the help of numerous people.
 
 Please see http://www.usebb.net/community/members.php?act=staff for a list of
 people involved in UseBB's development.
@@ -24,5 +24,8 @@ These portions are commented with the location of the original source.
 
 ---
 
-Last but not least, thanks to Sourceforge.net for hosting file releases and CVS
+Last but not least, thanks to SourceForge.net for hosting file releases and CVS
 and making UseBB's development possible.
+
+-- UseBB Team
+http://www.usebb.net
