--- a/README
+++ b/README
@@ -1,5 +1,1 @@
-A short and temporary installation manual can be found in docs/INSTALL. An
-upgrade manual can be found in docs/UPGRADE.
-
-See the documentation repository for further manuals:
-http://usebb.sourceforge.net/docs/.
+Please see docs/index.html.
