--- a/docs/INSTALL
+++ b/docs/INSTALL
@@ -1,35 +1,1 @@
-UseBB Development Version Installation
---------------------------------------
-
-Until UseBB is in a stable state, this guide will remain very simple.
-
-Before installing UseBB, make sure your host accords to the minimal system requirements.
-* Minimal: HTTP-server supporting PHP, PHP 4.1.0, MySQL 3.23
-* Recommended: GNU/Linux, most recent versions of Apache, PHP and MySQL
-
-UseBB is being tested continually with recent versions of PHP 4 (4.4.2)
-and PHP 5 (5.1.2) on MySQL 4.0.
-
---------------------------------------
-
-To install UseBB, you have two choices:
-
-- Use the automatic installer:
-	1. Rename config.php-dist to config.php.
-	2. Chmod config.php so that it is writable by the webserver (try chmod 0777).
-		(not necessary but *highly* recommended)
-	3. Use the installation wizard, located at install/index.php.
-
-	--OR--
-
-- Install the board manually:
-	1. Execute install/schemas/mysql.sql and install/usebb.sql on your database.
-	2. Rename config.php-dist to config.php and edit to your preferences.
-	3. Upload all the files to your host.
-	4. Delete the directory install/ for security reasons.
-	5. Chmod config.php so that it is writable by the webserver (try chmod 0777).
-		(not necessary but *highly* recommended)
-	6. Register a first user. It will automatically be an administrator.
-
---
-http://www.usebb.net
+Please see index.html.
