Fixed notice Implicit cloning (zend.ze1_compatibility_mode).

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -6,6 +6,7 @@ UseBB 1.0 RC2 Changelog
 - Fixed SQL injection issue with member list search.
 - Fixed minor XSS issue with user date format.
 - Fixed bug Undefined index: post_time on deleting post.
+- Fixed notice Implicit cloning (zend.ze1_compatibility_mode).
 - Fixed Dutch translation errors.
 - Various template improvements.
 
