Fixed bug in BBCode parsing.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,6 +7,7 @@ UseBB 1.0 RC2 Changelog
 - Fixed minor XSS issue with user date format.
 - Fixed bug Undefined index: post_time on deleting post.
 - Fixed bug with XML parsing errors on bad ASCII characters.
+- Fixed bug in BBCode parsing.
 - Fixed notice Implicit cloning (zend.ze1_compatibility_mode).
 - Fixed Dutch translation errors.
 - Various template improvements.
