BBCode URLs now contain title attributes.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -10,6 +10,7 @@ UseBB 1.0 RC2 Changelog
 - Fixed bug in BBCode parsing.
 - Fixed notice Implicit cloning (zend.ze1_compatibility_mode).
 - Fixed Dutch translation errors.
+- BBCode URLs now contain title attributes.
 - Various template improvements.
 
 UseBB 1.0 RC1 Changelog
