--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,6 +4,7 @@ UseBB 1.0 RC3 Changelog
 ------------------------------
 
 - Fixed bug in BBCode parsing removing whitespace in quote.
+- Minor changes in db_* to disable query log for convertors.
 
 UseBB 1.0 RC2 Changelog
 ------------------------------
