--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,6 +4,7 @@ UseBB 1.0 RC3 Changelog
 ------------------------------
 
 - Fixed minor XSS issue in ACP's edit member feature.
+- Fixed bug #1140: open_basedir restriction in effect.
 - Fixed bug in BBCode parsing removing whitespace in quote.
 - Fixed bug where feature links were hidden for admins when closed.
 - Fixed bug where board name was not unhtml'ed in footer.
