--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,6 +3,7 @@ $Header$
 UseBB 1.0 Changelog
 ------------------------------
 
+- Fixed bug #1169: include single quote in IMG and URL BBCode.
 - Reworked notice/error ignore code (fixes bug #1161).
 - Removed \n with each <br />.
 
