Fixed bug with undefined ['HTTP_HOST'].

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,6 +4,7 @@ UseBB 1.0 Changelog
 ------------------------------
 
 - Fixed bug #1169: include single quote in IMG and URL BBCode.
+- Fixed bug with undefined $_SERVER['HTTP_HOST'].
 - Reworked notice/error ignore code (fixes bug #1161).
 - Removed \n with each <br /> for BBCode.
 - Removed &new in admin.php, fixing various strange server errors.
