--- a/Changelog.txt
+++ b/Changelog.txt
@@ -10,6 +10,7 @@ UseBB 1.0 Changelog
 - Removed &new in admin.php, fixing various strange server errors.
 - Unset auto login cookie when data is invalid.
 - Also recognize application/xml as XHTML templates.
+- Added {lp_author} and {lp_date} for listing templates.
 - Small template improvements.
 
 UseBB 1.0 RC3 Changelog
