--- a/Changelog.txt
+++ b/Changelog.txt
@@ -13,6 +13,7 @@ UseBB 1.0 Changelog
 - Also recognize application/xml as XHTML templates.
 - Added {lp_author} and {lp_date} for listing templates.
 - Fix some wrong config settings in config.php.
+- Order usernames by registration date in Activate Members.
 - Small template improvements.
 
 UseBB 1.0 RC3 Changelog
