--- a/Changelog.txt
+++ b/Changelog.txt
@@ -16,6 +16,7 @@ UseBB 1.0 Changelog
 - Order usernames by registration date in Activate Members.
 - Disable BCC to own address on own mail form.
 - Database configuration is now hidden in ACP by default.
+- Added possibility to perform SET NAMES latin1 on connect for mysqli.
 - Small template improvements.
 
 UseBB 1.0 RC3 Changelog
