--- a/Changelog.txt
+++ b/Changelog.txt
@@ -5,10 +5,10 @@ UseBB 1.0 Changelog
 
 - Fixed bug #1190: wrong mbstring usage (patch by Tadashi Jokagi).
 - Fixed bug #1169: include single quote in IMG and URL BBCode.
+- Fixed bug #1161: fopen and safe mode restriction.
 - Fixed bug with undefined $_SERVER['HTTP_HOST'].
-- Reworked notice/error ignore code (fixes bug #1161).
+- Fixed bug causing strange server errors with &new.
 - Removed \n with each <br /> for BBCode.
-- Removed &new in admin.php, fixing various strange server errors.
 - Unset auto login cookie when data is invalid.
 - Also recognize application/xml as XHTML templates.
 - Added {lp_author} and {lp_date} for listing templates.
