--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,6 +8,7 @@ UseBB 1.0 Changelog
 - Fixed bug #1161: fopen and safe mode restriction.
 - Fixed bug with undefined $_SERVER['HTTP_HOST'].
 - Fixed bug causing strange server errors with &new.
+- Fixed bug sometimes redirecting to wrong page for new posts.
 - Removed \n with each <br /> for BBCode.
 - Unset auto login cookie when data is invalid.
 - Also recognize application/xml as XHTML templates.
