--- a/Changelog.txt
+++ b/Changelog.txt
@@ -6,6 +6,7 @@ UseBB 1.0.1 Changelog
 - Fixed bug #1208: unreplaced %s with Log Out on detailed online list.
 - Fixed bug making logging out with auto login present impossible.
 - Fixed bug not stripping slashes in mass email message.
+- Strip BBCode from post preview on search results instead of showing them raw.
 
 UseBB 1.0 Changelog
 ------------------------------
