--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,6 +7,7 @@ UseBB 1.0.1 Changelog
 - Fixed bug making logging out with auto login present impossible.
 - Fixed bug not stripping slashes in mass email message.
 - Strip BBCode from post preview on search results instead of showing them raw.
+- "Target blank" now works with JS instead of deprecated target attribute.
 
 UseBB 1.0 Changelog
 ------------------------------
