--- a/Changelog.txt
+++ b/Changelog.txt
@@ -10,6 +10,7 @@ UseBB 1.0.1 Changelog
 - Fixed bug setting content type of RSS feed to text/html.
 - Strip BBCode from post preview on search results instead of showing them raw.
 - "Target blank" now works with JS instead of deprecated target attribute.
+- Added info about default language and template in ACP general config.
 
 UseBB 1.0 Changelog
 ------------------------------
