--- a/Changelog.txt
+++ b/Changelog.txt
@@ -5,6 +5,7 @@ UseBB 1.0.2 Changelog
 
 - Added possibility to use Reply-To header for user emails.
 - Fixed bug with fread() error for server load on some servers.
+- Display server load values always as float with 2 decimals.
 
 UseBB 1.0.1 Changelog
 ------------------------------
