--- a/Changelog.txt
+++ b/Changelog.txt
@@ -6,6 +6,7 @@ UseBB 1.0.2 Changelog
 - Added possibility to use Reply-To header for user emails.
 - Fixed bug with fread() error for server load on some servers.
 - Display server load values always as float with 2 decimals.
+- Show month names in month selection box for the birthday profile field.
 
 UseBB 1.0.1 Changelog
 ------------------------------
