--- a/Changelog.txt
+++ b/Changelog.txt
@@ -5,6 +5,7 @@ UseBB 1.0.2 Changelog
 
 - Added possibility to use Reply-To header for user emails.
 - Fixed bug with fread() error for server load on some servers.
+- Performance improvements with less queries for post edit info.
 - Display server load values always as float with 2 decimals.
 - Show month names in month selection box for the birthday profile field.
 
