--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,6 +4,7 @@ UseBB 1.0.2 Changelog
 ------------------------------
 
 - Added possibility to use Reply-To header for user emails.
+- Fixed bug #1279: BBCode parsing bug within [ ... ].
 - Fixed bug with fread() error for server load on some servers.
 - Performance improvements with less queries for post edit info.
 - Improvement/fix to external link JS, properly detect rel attribute value.
