--- a/Changelog.txt
+++ b/Changelog.txt
@@ -6,6 +6,7 @@ UseBB 1.0.2 Changelog
 - Added possibility to use Reply-To header for user emails.
 - Fixed bug #1279: BBCode parsing bug within [ ... ].
 - Fixed bug with fread() error for server load on some servers.
+- Fixed bug with partial IP address matching for DNSBL whitelist.
 - Performance improvements with less queries for post edit info.
 - Improvement/fix to external link JS, properly detect rel attribute value.
 - Display server load values always as float with 2 decimals.
