--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,10 @@
 $Header$
 
+UseBB 1.0.3 Changelog
+------------------------------
+
+- Fixed db_mysql to use new_link parameter while connecting.
+
 UseBB 1.0.2 Changelog
 ------------------------------
 
