--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,6 +3,7 @@ $Header$
 UseBB 1.0.3 Changelog
 ------------------------------
 
+- Fixed bug #1296: use MTA -f argument when necessary (patch by Tadashi Jokagi).
 - Fixed db_mysql to use new_link parameter while connecting.
 
 UseBB 1.0.2 Changelog
