--- a/Changelog.txt
+++ b/Changelog.txt
@@ -5,6 +5,8 @@ UseBB 1.0.3 Changelog
 
 - Fixed bug #1296: use MTA -f argument when necessary (patch by Tadashi Jokagi).
 - Fixed db_mysql to use new_link parameter while connecting.
+- Will now set cookies with the httpOnly flag as of PHP 5.2.0RC2.
+- Custom setcookie function always sets right past expiry value when needed.
 
 UseBB 1.0.2 Changelog
 ------------------------------
