Allow guests to edit all guest postings when permissions are set up like this,         but don't allow them to edit guest posts otherwise.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -9,6 +9,8 @@ UseBB 1.0.3 Changelog
 - Will now set cookies with the httpOnly flag, when enabled (by default).
 - Custom setcookie function always sets right past expiry value when needed.
 - Don't allow posts only containing BBCode tags to be posted.
+- Allow guests to edit all guest postings when permissions are set up like this,
+	but don't allow them to edit guest posts otherwise.
 
 UseBB 1.0.2 Changelog
 ------------------------------
