--- a/AUTHORS
+++ b/AUTHORS
@@ -1,14 +1,10 @@
-Since 2003, UseBB is brought to you with the help of numerous people.
-
-Please see http://www.usebb.net/community/members.php?act=staff for a list of
-people involved in UseBB's development.
-
-Also thanks to many people helping us by reporting bugs, giving feature
-suggestions and various pieces of helpful code.
+Since 2003, UseBB is developed by Dietrich Moerman; with the help of various
+people providing patches and bug fixes, and of course the UseBB Community for
+giving feature requests and bug reports.
 
 ---
 
-Code Credits
+3rd Party Code Credits
 
 Smilies are copyrighted by aiwebs.co.nz and distributed under the terms of the
 GNU General Public License.
