--- a/Changelog.txt
+++ b/Changelog.txt
@@ -5,6 +5,7 @@ UseBB 1.0.4 Changelog
 
 - Fixed bug #1358: Undefined index: PATH_TRANSLATED on module upload.
 - Fixed bug #1377: Make the BBCode controls valid.
+- Fixed bug with crippled rtl &#...; entities.
 - Fixed bug with missing rel attribute on www. URL's.
 - Fixed bug with topic title rtrim on forum index.
 - Major performance improvements throughout the board and template parser.
