--- a/Changelog.txt
+++ b/Changelog.txt
@@ -16,6 +16,7 @@ UseBB 1.0.4 Changelog
 - Version check is now also possible through cURL.
 - Some minor usability improvements throughout the board.
 - Updated copyright (2007) and FSF's address.
+- Documentation (Readme) and installer updates (ie MySQL collations).
 - Removed DNSBL wildcard IP address banning (useless).
 
 UseBB 1.0.3 Changelog
