update of a previous change

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -5,6 +5,7 @@ UseBB 1.0.5 Changelog
 
 - Display error upon impossible (> 3) level value of member.
 - Avatars are now resized only when needed (using JavaScript).
+- Random passwords by "forgot password" now respect the password minimum length.
 
 UseBB 1.0.4 Changelog
 ------------------------------
