Changed method to show e-mail addresses "spam proof", now using HTML entities.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -6,6 +6,7 @@ UseBB 1.0.5 Changelog
 - Display error upon impossible (> 3) level value of member.
 - Avatars are now resized only when needed (using JavaScript).
 - Random passwords by "forgot password" now respect the password minimum length.
+- Changed method to show e-mail addresses "spam proof", now using HTML entities.
 
 UseBB 1.0.4 Changelog
 ------------------------------
