--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,6 +4,7 @@ UseBB 1.0.5 Changelog
 ------------------------------
 
 - Fixed bug #1469: BLOB/TEXT column [...] can't have a default value.
+- Fixed bug with BBCode URL parsing and asterisks.
 - Display error upon impossible (> 3) level value of member.
 - Avatars are now resized only when needed (using JavaScript).
 - Random passwords by "forgot password" now respect the password minimum length.
